--- a/dev/static/styles/modules/modules.scss
+++ b/dev/static/styles/modules/modules.scss
@@ -9,3 +9,7 @@
 @import "components/popup-award";
 @import "components/popup-create";
 @import "components/lesson";
+@import "components/payment";
+@import "components/materials";
+@import "components/test";
+@import "components/questionnaire";
