--- a/dev/static/styles/modules/header/course.scss
+++ b/dev/static/styles/modules/header/course.scss
@@ -1,12 +1,9 @@
 .course {
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100vh;
 
     top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
 
     @include flex-setting(column, center, center);
 
